# semikong

./: .codacy.yml  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALL.md  LICENSE  README.md  api.py  compose.yaml  inference_llm_openai.py  inference_vllm_openai.py  inference_vllm_server.py  logging_setup.py  pyproject.toml  raw_inference.py  requirements-dev.txt  requirements.txt  setup.py  training.py
.devcontainer/: devcontainer.json
.github/workflows/: branch-flow.yml
configs/: training-config.yaml
inference/: inference.py
model/: INSTALL.md  Makefile  README.md  USAGE.md  requirements-dev.txt  requirements.txt
model/common/: logging_setup.py
model/configs/: inference-config.yaml  training-config.yaml
model/docs/: ecosystem.md  governance.md  overview.md
model/inference/: raw_inference.py  vllm_client.py
model/training/: train.py
ontology/: LICENSE  MANIFESTO.md  Makefile  README.md
ontology/docs/: architecture.md  design-spec.md  flat-file-organization.md  methodology.md  ontology-layer-06-osat-packaging-test.md  ontology-layer-07-wfe.md  readiness-test.md  semiconductor-industry-ontology-hierarchy.md  source-policy.md
ontology/ontologist/: 00-index.yaml  AGENTS.md  README.md
ontology/ontology/: README.md
ontology/scripts/: export-agentic.sh
ontology/shapes/: final-test-execution.shacl.ttl  lot-genealogy-shapes.ttl
shared/: README.md
src/configs/: __init__.py  datasets.py  fsdp.py  quantization.py  training.py
src/dataset/: concatenator.py  (+1 more)
tests/: README.md
utils/: config_utils.py  download_model.py
(+519 files in other folders)
