[project]
name = "semikong"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "", email = "" }
]
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.45.3",
    "datasets>=3.3.2",
    "huggingface-hub>=0.29.1",
    "loguru>=0.7.3",
    "numpy>=2.2.3",
    "peft>=0.14.0",
    "transformers>=4.49.0",
    "trl>=0.15.2",
    "vllm>=0.5.0.post1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.1.0",
    "pylint>=3.3.4",
    "tqdm>=4.67.1",
]

